--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,6 +19,7 @@
     }
   ],
   "start_url": ".",
+  "scope": "https://victorhugo183.github.io/runeword-helper/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
